# Final-Year-Project

./: .gitignore  README.md  abstract.md  abstract.typ  abstract_detailed.typ  daily_report.typ  proposal.typ  template.typ  test_pit_histogram.py
chronos/: .gitignore  Chronos-Bolt-Based Forecasting of Macroeconomic Indicators.md  Chronos-Bolt-Forecasting-Documentation.typ  IMPLEMENTATION_SUMMARY.md  README.md  UPDATED_OUTLINE.md  advanced_tokenizer.py  baseline_models.py  bench.py  chronos_behavioral_framework.py  cli.py  comprehensive_demo.py  cross_validation.py  data_preparation_script.py  enhanced_data_preparation.py  extras.typ  final_demo.py  imf_data_loader.py  main.py  outputs.md  pyproject.toml  robust_demo.py  setup.py  test_framework.py  visualization.py  working_demo.py
chronos/comprehensive_demo_report/: forecast_report.html
chronos/imf_cache/: WEOOct2025all.xls
chronos/sample_data/: clickstream_data.csv  engagement_data.csv  sentiment_scores.csv
version2/: PLAN.md  README.md  REPORT.typ  RUNNING_THE_PROJECT.md  UPDATED_OUTLINE.md  main.py  pyproject.toml  test_basic.py  test_minimal.py
version2/experiments/: phase3_zero_shot.py  phase4_fine_tuning.py
version2/results/phase3/: phase3_summary_report.txt
version2/src/: __init__.py  main.py
version2/src/analysis/: __init__.py
version2/src/app/: __init__.py
version2/src/data/: __init__.py  cleaning.py  fetchers.py
version2/src/eval/: metrics.py
version2/src/models/: __init__.py  baselines.py  chronos_wrapper.py  tcn_forecaster.py
version2/src/preprocessing/: __init__.py  tokenizer.py
version2/src/utils/: config.py  logger.py
version3/: FINE_TUNING_ITERATION_GUIDE.md  QUICK_START.md  README.md  REPORT2.typ  REPORT_CONCISE.typ  RESEARCH_OVERVIEW.md  SESSION_SUMMARY.md  demonstrate_fine_tuning_iteration.py  demonstrate_phase3.py  demonstrate_phase4.py  pyproject.toml  test_experiment.py  test_minimal_experiment.py  validate_project.py
version3/experiments/phase3/: zero_shot.py
version3/experiments/phase4/: fine_tune.py
version3/src/analysis/: __init__.py
version3/src/data/: cleaning.py  fetchers.py
version3/src/eval/: metrics.py
version3/src/models/: baselines.py  chronos_wrapper.py  fine_tuning_iterator.py
version3/src/preprocessing/: tokenizer.py
version3/src/utils/: config.py  logger.py
version3/tests/: test_smoke.py
