[project]
name = "chronos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chronos-forecasting>=1.5.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "plotly>=5.17.0",
    "statsmodels>=0.14.0",
    "sdmx1>=2.23.1",
]
