[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "financial-forecasting-chronos"
version = "0.1.0"
description = "Multivariate financial forecasting with Chronos models using AutoGluon"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Financial Forecasting Team"},
]
keywords = ["time-series", "forecasting", "finance", "chronos", "autogluon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "transformers>=4.40.0",
    "yfinance>=0.2.32",
    "fredapi>=0.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "accelerate>=1.11.0",
    "peft>=0.17.1",
    "chronos-forecasting>=2.0.1",
]

[project.optional-dependencies]
autogluon = [
    "autogluon>=1.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.5",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.uv]
link-mode = "symlink"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyrefly]
line-length = 100
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
